1.06

1.05, 7 April 2012
  * converted everything over to new token handling classes in dfh.grammar
  * added sentence boundary rule

0.04, 24 March 2012
  * implemented rule reversal
  * made adjustments for latest dfh.grammar API

0.03, 14 Jan, 2012
  * fixed to work with API of Grammar 1.11

0.02, 28 Sept, 2011
  * added pronoun rule
  * improved determiner rule
  * javadoc cleanup
  * added Changelog